# libfcgi

./: .gitignore  ChangeLog.md  Makefile.am  README.md  acinclude.m4  configure.ac
cgi-fcgi/: .gitignore  Makefile.am  cgi-fcgi.c
doc/: fcgi-devel-kit.htm  fcgi-java.htm  fcgi-perf.htm  fcgi-perl.htm  fcgi-spec.html  fcgi-tcl.htm  overview.html
doc/fastcgi-whitepaper/: fastcgi.htm
examples/: .gitignore  Makefile.am  log-dump.c  threaded.c
include/: .gitignore  fcgi_stdio.h
src/: .gitignore  Makefile.am  fcgi_stdio.c  fcgiapp.c  fcgio.cpp  os_unix.c
